# ConUHacks2025

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dashboard.py  knowledge.md  requirements.txt  streamlit_dashboard.py
actix-server/: main.rs
frontend/: package-lock.json  package.json  streamlit_app.py
frontend/src/: Dashboard.tsx
learning-rust/: main
learning-rust/guessing_game/src/: main.rs
learning-rust/rand/src/: main.rs
src/: db.rs  detection.rs  lib.rs  llm.rs  main.rs  models.rs  parser.rs  py_bridge.rs  sniff.rs
system-diagrams/: component-diagram.txt  database-erd.txt  plantuml-reference.md
